--- a/style.scss
+++ b/style.scss
@@ -755,7 +755,7 @@ footer{
 
 // service page css
 .service-hero{
-  padding-top: 180px;
+  padding-top: 60px;
   margin-bottom: 50px;
   .container{
     .row{
@@ -862,7 +862,7 @@ footer{
 // about page css
 
 .about-hero{
-  padding-top: 180px;
+  padding-top: 60px;
   margin-bottom: 50px;
   .container{
     .row{
@@ -1200,4 +1200,43 @@ i{
   }
 }
   
+
+
+//portfolio page scss
+
+section.portfolio{
+    .cardBox{
+        overflow: hidden;
+        background-size: contain;
+        background-repeat: no-repeat;
+        .cardImgAndText{
+            position: relative;
+            img{
+                border-radius: 18px;
+                z-index: 0;
+                width: 100%;
+                transition: 1s;
+            }
+            h4{
+                position: absolute;
+                left: 0;
+                right: 0;
+                text-align: center;
+                margin-top: 80px;
+                z-index: 20000;
+                color: #fff;
+                opacity: 0;
+                transition: 1s;
+            }
+        }
+        &:hover img{
+            filter: blur(4px);
+            opacity: 0.6;
+        }
+        &:hover h4{
+            opacity: 1;
+        }
+    }
+    
+}
  
