--- a/style.scss
+++ b/style.scss
@@ -857,6 +857,66 @@ footer{
 }
 
 
+// portfolio- page css
+
+.portfolio-card{
+  margin-bottom: 50px;
+  h1{
+    color:#33475b;
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+  }
+  .row{
+    margin-top: 30px; 
+    .col{
+      padding: 15px;
+       border-radius: 15px;
+
+      .card{
+        border: none !important;
+       
+        //padding: 20px 30px;
+       .card-header{
+         padding: 0;
+         border: none !important;
+         border-radius: 15px;
+         img{
+           //width:300px;
+           height:350px;
+           
+         }
+       }
+       .card-body{
+         border-radius: 0 0 15px 15px;
+         padding: 20px 15px;
+         h2{
+           text-align: center;
+           font-weight: 700;
+           font-size: 18px;
+           color: #33475b;
+           padding:  0;
+         }
+          p{
+        font-weight: 400;
+        font-size: 14px;
+        color:#33475b;
+       // margin-top: 20px;
+      }
+      a{
+        font-size: 18px; 
+           font-weight: 500;
+            color: #33475b;
+            background-color: #ffffff7e; 
+               padding: 10px 25px;
+                border-radius: 15px;
+      }
+       }
+      }
+    }
+  }
+}
+
 
 
 // about page css
@@ -1240,3 +1300,44 @@ section.portfolio{
     
 }
  
+
+/**
+
+contact page css styles
+
+**/
+.contact-page{
+  background-color: #ffffff;
+//background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%2377aa77'/%3E%3Cstop offset='1' stop-color='%234fd'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%23cf8' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23cf8' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%23cf8' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23cf8' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
+background-attachment: fixed;
+background-size: cover;
+  padding: 80px 0;
+  .row{
+    .contact-form{
+      padding: 0 20px;
+    }
+  }
+    h1{
+    font-size: 40px;
+    font-weight: 700;
+    color: #33475b;
+    padding-bottom: 30px;
+    text-align: left;
+    
+  }
+  input ,textarea{
+    background-color: #f3f3f3;
+    color: #33475b;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 15px 20px;
+    border: none;
+    margin: 20px 0;
+  }
+
+
+}
+
+
+
+
