--- a/style.css
+++ b/style.css
@@ -600,11 +600,11 @@ section.intro .row .card:hover {
 
 .form-control:focus {
   color: #212529;
-  background-color: #fff;
+  background-color: #f3f3f3;
   border-color: #f6f6f6;
   outline: 0;
-  -webkit-box-shadow: 1px 1px 1px 1px #6d6d6d;
-          box-shadow: 1px 1px 1px 1px #6d6d6d;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .contact {
@@ -1325,16 +1325,62 @@ contact page css styles
   font-weight: 700;
   color: #33475b;
   padding-bottom: 30px;
-  text-align: left;
+  text-align: center;
 }
 
 .contact-page input, .contact-page textarea {
-  background-color: #f3f3f3;
+  background-color: #f2f5f6;
   color: #33475b;
   font-size: 18px;
   font-weight: 500;
   padding: 15px 20px;
   border: none;
   margin: 20px 0;
+}
+
+.contact-page .card {
+  text-align: center;
+  -webkit-transition: all 0.8s ease;
+  transition: all 0.8s ease;
+  display: block;
+  background-color: #f2f5f6;
+  border: none !important;
+  padding: 25px 10px 28px 10px;
+}
+
+.contact-page .card h2 {
+  font-size: 24px;
+  color: #33475b;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+.contact-page .card p {
+  font-size: 14px;
+  font-weight: 500;
+  color: #33475b;
+  text-align: center;
+}
+
+.contact-page .card i {
+  font-size: 32px;
+  color: #428bca;
+  border-radius: 50%;
+  padding: 10px 15px;
+  border: 2px dotted #9eccf4;
+}
+
+.contact-page .card img {
+  margin-bottom: 20px;
+  width: 50px;
+  height: 50px;
+  color: #33475b;
+  text-align: center;
+}
+
+.contact-page .card:hover {
+  background-color: #ffffff;
+  -webkit-box-shadow: 2px 2px 10px 4px rgba(0, 0, 0, 0.2);
+          box-shadow: 2px 2px 10px 4px rgba(0, 0, 0, 0.2);
 }
 /*# sourceMappingURL=style.css.map */
