--- a/style.scss
+++ b/style.scss
@@ -600,10 +600,10 @@ h1{
 }
 .form-control:focus {
     color: #212529;
-    background-color: #fff;
- border-color: #f6f6f6  ;
+    background-color: #f3f3f3;
+    border-color: #f6f6f6  ;
     outline: 0;
-   box-shadow :1px 1px 1px 1px#6d6d6d;
+   box-shadow :none;
 }
 .contact{
   background-color: #77aa77;
@@ -1322,11 +1322,11 @@ background-size: cover;
     font-weight: 700;
     color: #33475b;
     padding-bottom: 30px;
-    text-align: left;
+    text-align: center;
     
   }
   input ,textarea{
-    background-color: #f3f3f3;
+    background-color: #f2f5f6;
     color: #33475b;
     font-size: 18px;
     font-weight: 500;
@@ -1334,7 +1334,50 @@ background-size: cover;
     border: none;
     margin: 20px 0;
   }
+.card{
+  text-align: center;
+      transition: all 0.8s ease;
+      display: block;
+      //min-height: 350px;
+      background-color: #f2f5f6;
+      border: none !important; 
+      padding: 25px 10px 28px 10px;
+      
+      h2{
+        font-size: 24px;
+        color: #33475b;
+        font-weight: 600;
+        margin-top: 10px;
+      }
+      p {
+        font-size: 14px;
+        font-weight: 500;
+        color: #33475b;
 
+        text-align: center;
+      }
+      i{
+        
+    font-size: 32px;
+    color: #428bca;
+    border-radius: 50%;
+    padding: 10px 15px;
+    border: 2px dotted #9eccf4;
+
+      }
+      img{
+        margin-bottom: 20px;
+        width: 50px;
+        height: 50px;
+        color:#33475b;
+        text-align: center;
+      }
+      
+    }
+    .card:hover{
+      background-color: #ffffff;
+      box-shadow: 2px 2px 10px 4px rgba(0, 0, 0, 0.2);
+    }
 
 }
 
