--- a/style.scss
+++ b/style.scss
@@ -42,6 +42,16 @@ dl, ol, ul {
   background-color: #ff662934;
  color:#ff6529;
 }
+
+/*
+ button focus remove css
+*/
+.btn-check:focus+.btn, .btn:focus {
+    outline: 0;
+    box-shadow:none;
+}
+
+
 // common button ends
 
 
@@ -335,7 +345,7 @@ section.intro{
 
    }
     .card{
-      //height: 700px;
+      height: 600px;
       margin: 10px 15px;
       padding: 30px 10px;
       transition: .15s ease-in-out,transform .15s ease-in-out;
@@ -346,18 +356,19 @@ section.intro{
         padding: 20px;
         text-align: center; 
         //width: 100%;
-        height: 300px;
+        height: 250px;
       }
       .card-body{
         padding: 5px;
         h5{
           //padding: 0;
-          height: 50px;
+          //height: 50px;
           text-align: center;
           font-size: 24px;
           font-weight: 700;
           color:#33475b;
           margin-bottom: 20px;
+          text-transform: capitalize ;
         }
         p{
           text-align: center;
