--- a/style.scss
+++ b/style.scss
@@ -58,7 +58,7 @@ dl, ol, ul {
 // header or hero section start here
 header.header-hero{
   background-image: linear-gradient(to top right,#fef8f0,#fff3ee,#fff1ee);
-  border-bottom: 3px solid $themeMainTxtColor ;
+  //border-bottom: 3px solid $themeMainTxtColor ;
   color: $themeMainTxtColor;
   nav{
     width: 100%;
