--- a/style.scss
+++ b/style.scss
@@ -58,12 +58,14 @@ dl, ol, ul {
 // header or hero section start here
 header.header-hero{
   background-image: linear-gradient(to top right,#fef8f0,#fff3ee,#fff1ee);
-  //border-bottom: 3px solid $themeMainTxtColor ;
+  border-bottom: 3px solid $themeMainTxtColor ;
   color: $themeMainTxtColor;
   nav{
+    position: fixed;
     width: 100%;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     background: #ffffff;
+    z-index: 100;
       a{
         color: $themeMainTxtColor;
         font-weight: 500;
@@ -94,8 +96,10 @@ header.header-hero{
     }
   }
   .container{
+    
     .headerContents{
-      padding: 80px 0 50px 0;
+      padding: 150px 0 50px 0;
+      
       h1{
         font-size: 50px;
         font-weight: 700;
@@ -766,7 +770,7 @@ footer{
 
 // service page css
 .service-hero{
-  padding-top: 60px;
+  padding-top: 100px;
   margin-bottom: 50px;
   .container{
     .row{
@@ -933,7 +937,7 @@ footer{
 // about page css
 
 .about-hero{
-  padding-top: 60px;
+  padding-top: 100px;
   margin-bottom: 50px;
   .container{
     .row{
@@ -1133,7 +1137,7 @@ i{
 
 
 .web-development-hero{
-  padding-top: 180px;
+  padding-top: 100px;
   margin-bottom: 50px;
   .container{
     .row{
@@ -1322,7 +1326,7 @@ contact page css styles
 //background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%2377aa77'/%3E%3Cstop offset='1' stop-color='%234fd'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%23cf8' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23cf8' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%23cf8' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23cf8' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
 background-attachment: fixed;
 background-size: cover;
-  padding: 80px 0;
+  padding: 100px 0;
   .row{
     .contact-form{
       padding: 0 20px;
