--- a/style.css
+++ b/style.css
@@ -1061,16 +1061,13 @@ footer .footer-bottom p {
   background-color: rgba(87, 166, 255, 0.15);
 }
 
+/*--------------------------------------------------------------
+# Team
+--------------------------------------------------------------*/
 .team {
-  background-color: rgba(246, 248, 249, 0.82);
-  padding: 100px 0;
-}
-
-.team h3 {
-  font-weight: 500;
-  font-size: 16px;
-  color: #33475b;
+  padding: 50px 0;
   text-align: center;
+  background-color: #f2f3f6;
 }
 
 .team h2 {
@@ -1081,57 +1078,122 @@ footer .footer-bottom p {
   margin-bottom: 30px;
 }
 
-.team .profile-view {
-  margin-top: 20px;
-  height: 300px;
-  position: relative;
-}
-
-.team .image {
-  border-radius: 20px;
-  opacity: 1;
-  display: block;
-  width: 100%;
-  height: 100%;
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-}
-
-.team .middle {
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+.team p {
+  color: #33475b;
+  font-size: 16px;
+  font-weight: 300;
   text-align: center;
 }
 
-.team .profile-view:hover .image {
-  opacity: 0.3;
+.team .row {
+  margin-top: 20px;
 }
 
-.team .profile-view:hover .middle {
-  opacity: 1;
-}
-
-.team .text {
-  background-color: #ffc582a4;
-  color: #33475b;
-  font-weight: 500;
-  font-size: 16px;
-  padding: 16px 10px;
+.team .member {
+  position: relative;
+  -webkit-box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  margin-top: 20px;
   border-radius: 10px;
+  background: #fff;
 }
 
-.team i {
-  color: #33475b;
-  padding: 5px;
+.team .member .pic {
+  overflow: hidden;
+  width: 180px;
+  border-radius: 50%;
+}
+
+.team .member .pic img {
+  -webkit-transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
+}
+
+.team .member:hover img {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.team .member .member-info {
+  padding-left: 30px;
+}
+
+.team .member h4 {
+  font-weight: 700;
+  margin-bottom: 5px;
+  font-size: 20px;
+  color: #05579e;
+}
+
+.team .member span {
+  display: block;
+  font-size: 15px;
+  padding-bottom: 10px;
+  position: relative;
+  font-weight: 500;
+}
+
+.team .member span::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 50px;
+  height: 1px;
+  background: #bfe0fd;
+  bottom: 0;
+  left: 0;
+}
+
+.team .member p {
+  margin: 10px 0 0 0;
+  font-size: 14px;
+}
+
+.team .member .social {
+  margin-top: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.team .member .social a {
+  -webkit-transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 50px;
+  width: 32px;
+  height: 32px;
+  background: #ecf6fe;
+  color: #0665b7;
+}
+
+.team .member .social a i {
+  font-size: 16px;
+  margin: 0 2px;
+}
+
+.team .member .social a:hover {
+  background: #0880e8;
+  color: #fff;
+}
+
+.team .member .social a + a {
+  margin-left: 8px;
 }
 
 .web-development-hero {
